# HPC-Course

./: Chapter-10.md  Chapter-2.md  Chapter-3.md  Chapter-4.md  Chapter-5.md  Chapter-6.md  Chapter-8.md  Chapter-9.md  Chpater-1.md  Readme.md
Code/: CMakeLists.txt
Code/exam2021/: CMakeLists.txt  exam1.c  exam2.c  exam3.c  exam4.c
Code/examples/: 0.helloworld.cpp  1.messagePassing.cpp  2.costomizeDataType.cpp  3.timer.cpp  4.relaypassing.cpp  5.Jacobi_1.cpp  6.calculatePi.cpp  CMakeLists.txt
Code/exercise/: CMakeLists.txt  triangleTransfer.c
